cabal-version:       3.0
name:                lira
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2019 M Farkas-Dyck
-- category:            
build-type:          Simple
extra-source-files:  README.md

common c
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

library
  import:              c
  hs-source-dirs:      src
  exposed-modules:     Core
  other-modules:       
  build-depends:       Map
                     , base >= 4.7 && < 5
                     , base-unicode-symbols
                     , containers
                     , hoopl
                     , lenz
                     , lenz-mtl
                     , microlens-mtl
                     , mtl
                     , peano
                     , transformers
                     , util >= 0.1.14

test-suite test
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5
                     , smallcheck >=1.1.4
                     , tasty >=1.0
                     , tasty-smallcheck >=0.8
                     , util
                     , lira

benchmark bench
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base >=4.11 && <5
                     , criterion >=1.4.1
                     , lira

source-repository head
  type:     git
  location: https://github.com/strake/lira.hs
