cabal-version:       3.0
name:                lira
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
copyright:           2019 M Farkas-Dyck
-- category:            
build-type:          Simple
extra-source-files:  README.md

common c
  build-depends:       Map
                     , Set
                     , category ^>= 0.2.4.2
                     , base ^>= 4.13
                     , base-unicode-symbols
                     , containers
                     , either-both
                     , filtrable
                     , hoopl
                     , hs-functors
                     , lenz
                     , peano
                     , text ^>= 1.2.3
                     , transformers ^>= 0.5.6
                     , util >= 0.1.16
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , OverloadedStrings
                     , GADTs
                     , TypeFamilies
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods
                       -Wno-unticked-promoted-constructors

library core
  import:              c
  hs-source-dirs:      src/core
  exposed-modules:     Core
                       Core.RegAlloc
                       Data.Assignment
  other-modules:       Data.MapSet
                       Orphans
  build-depends:       generic-trie
                     , lenz-mtl
                     , microlens-mtl
                     , mtl
                     , prettyprinter
                     , reg-alloc-graph-color:Hoopl

library parse
  import:              c
  hs-source-dirs:      src/parse
  exposed-modules:     Parse
  build-depends:       Earley ^>= 0.13.0.1
                     , lenz-mtl
                     , lex-applicative
                     , microlens-mtl
                     , mtl
                     , regex-applicative
                     , core

library x86
  import:              c
  hs-source-dirs:      arch/x86/src
  exposed-modules:     Asm
                     , AsmGen
  build-depends:       hoopl
                     , lenz-mtl
                     , microlens-mtl
                     , mtl
                     , core
                     , prettyprinter
                     , reg-alloc-graph-color:Hoopl

test-suite test
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       smallcheck >=1.1.4
                     , tasty >=1.0
                     , tasty-smallcheck >=0.8
                     , core

benchmark bench
  import:              c
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       criterion >=1.4.1
                     , core

executable round-trip-example
  import:              c
  hs-source-dirs:      example
  main-is:             round-trip.hs
  build-depends:       Earley
                     , core
                     , lex-applicative
                     , parse
                     , prettyprinter
                     , regex-applicative

source-repository head
  type:     git
  location: https://github.com/strake/lira.hs
